--- a/tp3/tp3.vcxproj.filters
+++ b/tp3/tp3.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Wagon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Modal.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Wagon.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Modal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
